/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'com.palantir.git-version' version '3.1.0'
}


repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
}

apply plugin: 'java'
apply plugin: 'maven-publish'

def versionDetails = versionDetails()

def snapshot =
        (versionDetails.commitDistance > 0
                || ! versionDetails.isCleanTag
                ||  "master" != versionDetails.branchName) ? "-SNAPSHOT" : ""

version = versionDetails.lastTag + snapshot

sourceSets {
     main.java.srcDirs = ['src/main/java']
     test.java.srcDirs = ['src/test/java']
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

configurations {
    extraLibs.extendsFrom implementation
}

dependencies {
    implementation group: 'com.smartgridready', name: 'sgr-driver-api', version: '1.1.0-SNAPSHOT'
    implementation group: 'io.github.java-native', name: 'jssc', version: '2.9.6'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.10'

    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.19.0'
    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.2'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
}

test {
    useJUnitPlatform() // needed to run JUnit 5 test with gradle
    // this workaround is required to run some tests under JDKs > 17.
    // otherwise EqualsBuilder.reflectionEquals(...) may fail due to inaccessible fields, e.g. serialVersionUID.
    doFirst {
        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
    }
}

jar {
    from sourceSets.main.allSource

    archiveFileName = 'easymodbus.jar'

    duplicatesStrategy = 'exclude'
    from {
        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
    }
}


publishing {
    repositories {
        maven {
            name = "Nexus"

            if (rootProject.version.toString().contains('SNAPSHOT')) {
                url = uri("https://nexus.library.smartgridready.ch/repository/maven-snapshots/")
            } else {
                url = uri("https://nexus.library.smartgridready.ch/repository/maven-releases")
            }

            credentials {
                username = findProperty("nexus.username")
                password = findProperty("nexus.password")
            }
        }
    }

    publications {
        impl(MavenPublication) {
            groupId = 'com.smartgridready'
            artifactId = 'easymodbus'

            from components.java
            pom {
                url.set("https://github.com/SmartgridReady/SGrJavaPackages.git")
            }
        }
    }
}

